--- a/indexdate.html
+++ b/indexdate.html
@@ -16,7 +16,7 @@
     </div>
     
     <div class="gif_container">
-        <img src="https://media0.giphy.com/media/c76IJLufpNwSULPk77/giphy.gif?cid=ecf05e4775tk5fbi49cxk7mo6mnwuu2z1dvk8l7bzn0ennk7&ep=v1_gifs_search&rid=giphy.gif&ct=g" alt="cute fif">
+        <img src="https://giphy.com/gifs/moodman-reaction-Fu3OjBQiCs3s0ZuLY3" alt="cute fif">
     </div>
     
 
