--- a/indexdate.html
+++ b/indexdate.html
@@ -16,7 +16,7 @@
     </div>
     
     <div class="gif_container">
-        <img src="https://giphy.com/gifs/moodman-reaction-Fu3OjBQiCs3s0ZuLY3" alt="cute fif">
+        <img src="https://media1.tenor.com/m/YHGmyXRaL3YAAAAd/smiling-dog.gif" alt="cute fif">
     </div>
     
 
