--- a/indexdate.html
+++ b/indexdate.html
@@ -11,7 +11,7 @@
     <div class="container">
     <div>
         <h1 class="ask">
-            DO YOU WANNA GO ON A DATE WITH ME ?
+            Do you love sai?
         </h1>
     </div>
     
@@ -22,9 +22,9 @@
 
 <div class="buttons">
 
-<button class="btn" id="yesButton" onclick="nextPage()">YES </button=>
+<button class="btn" id="noButton" onclick="nextPage()">no </button=>
 
-<button class="btn" id="noButton" onmouseover="moveButton()"> NO </button>
+<button class="btn" id="yesButton" onmouseover="moveButton()"> yes </button>
 
 </div> 
 <script>
@@ -36,10 +36,10 @@
 
     function moveButton()
     {
-        var x=Math.random() * ( window.innerWidth - document.getElementById('noButton').offsetWidth);
-        var y= Math.random() * ( window.innerHeight - document.getElementById('noButton').offsetHeight);
-        document.getElementById('noButton').style.left=`${x}px`;
-        document.getElementById('noButton').style.top=`${y}px`;
+        var x=Math.random() * ( window.innerWidth - document.getElementById('yesButton').offsetWidth);
+        var y= Math.random() * ( window.innerHeight - document.getElementById('yesButton').offsetHeight);
+        document.getElementById('yesButton').style.left=`${x}px`;
+        document.getElementById('yesButton').style.top=`${y}px`;
     }
 </script>
 
