--- a/yes.html
+++ b/yes.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>yayyyyee!!!!</title>
+    <title>hmm</title>
     <link rel="stylesheet" href="styleyes.css">
 </head>
 <body>
     <div class="container">
         <div>
-            <h1 class="ask"> YAYYYEEEEE!!!!!!!!!!!</h1>
+            <h1 class="ask"> okay!</h1>
         </div>
         <div class="gifcontainer">
-            <img src="https://media1.giphy.com/media/HkoyzeNqvWK81aqZ6S/200w.webp?cid=ecf05e47h4v6piy51jch99dx33toeq1ubeieswswqk5cg3ap&ep=v1_gifs_related&rid=200w.webp&ct=g" alt="yeyeeee!!">
+            <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExN2NvZmNjeXBqcm4xMTN3cDc3a3FyejVrMnAwMmcwOWI0N3B0bWJzNCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/ISOckXUybVfQ4/giphy.gif" alt="hm">
         </div>
     </div>
 </body>
