--- a/indexdate.html
+++ b/indexdate.html
@@ -11,7 +11,7 @@
     <div class="container">
     <div>
         <h1 class="ask">
-            Do you love sai?
+            Sorry  Arunima njn angane talk cheyallayirunu!!
         </h1>
     </div>
     
