--- a/yes.html
+++ b/yes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hmm</title>
+    <title>thank u for understanding!!!</title>
     <link rel="stylesheet" href="styleyes.css">
 </head>
 <body>
