--- a/indexdate.html
+++ b/indexdate.html
@@ -22,9 +22,9 @@
 
 <div class="buttons">
 
-<button class="btn" id="noButton" onclick="nextPage()">no </button=>
+<button class="btn" id="noButton" onclick="nextPage()">poda </button=>
 
-<button class="btn" id="yesButton" onmouseover="moveButton()"> yes </button>
+<button class="btn" id="yesButton" onmouseover="moveButton()"> its okay </button>
 
 </div> 
 <script>
